--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.21",
     "import": "^0.0.6",
+    "jsonwebtoken": "^9.0.2",
     "or": "^0.2.0",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
@@ -27,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.0.6",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "redux-thunk": "3.1.0",
