--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.1.2",
     "nodemon": "^2.0.15"
