--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.3",
     "react-multi-carousel": "^2.8.5",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
